@@ -57,6 +57,9 @@ and it will not be possible to do any file access (including storing
 or retrieving) to any file starting with a period.  This may be useful
 for anonymous FTP servers.
 .TP
+.B SESSION_TIMEOUT
+The maximum number of seconds to allow a single session to last.
+.TP
 .B SOFTCHROOT
 If set, and
 .B CHROOT
